--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -10,6 +10,12 @@
 			<artifactId>commons-text</artifactId>
 			<version>1.2.8-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<properties>
 		<maven.compiler.source>1.6</maven.compiler.source>
