--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>de.unkrig.lfr</groupId>
 	<artifactId>lfr-core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Lightning fast regular expressions</name>
+	<name>Lightning-fast regular expressions</name>
 	<dependencies>
 		<dependency>
 			<groupId>de.unkrig.commons</groupId>
