--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -16,6 +16,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.unkrig.lfr</groupId>
+			<artifactId>ref4j</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<maven.compiler.source>1.6</maven.compiler.source>
