--- a/ref4j/pom.xml
+++ b/ref4j/pom.xml
@@ -16,5 +16,11 @@
   		<artifactId>commons-util</artifactId>
   		<version>1.2.11-SNAPSHOT</version>
   	</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
 </project>
