--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -1,14 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>de.unkrig.lfr</groupId>
 	<artifactId>lfr-core</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
+
 	<name>Lightning-fast regular expressions</name>
+
+	<url>https://github.com/aunkrig/lfr/</url>
+
 	<dependencies>
 		<dependency>
 			<groupId>de.unkrig.commons</groupId>
 			<artifactId>commons-text</artifactId>
-			<version>1.2.11-SNAPSHOT</version>
+			<version>1.2.11</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -19,7 +24,7 @@
 		<dependency>
 			<groupId>de.unkrig.lfr</groupId>
 			<artifactId>ref4j</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -27,9 +32,69 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
+	<description>de.unkrig.commons - A general-purpose Java class library</description>
+
+	<organization>
+		<name>Arno Unkrig</name>
+		<url>http://unkrig.de/</url>
+	</organization>
+
+	<scm>
+		<url>https://github.com/aunkrig/lfr</url>
+	</scm>
+
+	<developers>
+		<developer>
+			<name>Arno Unkrig</name>
+			<email>arno@unkrig.de</email>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>New BSD License</name>
+			<url>http://unkrig.de/w/New_BSD_License</url>
+		</license>
+	</licenses>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<build>
 		<plugins>
+
+			<!-- Java source-jar plug-in: -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Maven staging plug-in: -->
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
 			
 			<!-- Javadoc plug-in: -->
 			<plugin>
@@ -56,4 +121,28 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+
+		<!-- Signs all artifacts with GPG (oss.sonatype.org requires that). -->
+		<profile>
+			<id>have_gpg</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals><goal>sign</goal></goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
