--- a/ref4j/pom.xml
+++ b/ref4j/pom.xml
@@ -1,26 +1,144 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>de.unkrig.lfr</groupId>
-  <artifactId>ref4j</artifactId>
-  <version>1.0</version>
-  <name>Regular Expression Facade for Java</name>
-  <description>A facade or abstraction for various regular expression frameworks (currently java.util.regex and de.unkrig.lfr).</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>de.unkrig.commons</groupId>
-  		<artifactId>commons-nullanalysis</artifactId>
-  		<version>1.2.11</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>de.unkrig.commons</groupId>
-  		<artifactId>commons-util</artifactId>
-  		<version>1.2.11</version>
-  	</dependency>
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>de.unkrig.lfr</groupId>
+	<artifactId>ref4j</artifactId>
+	<version>1.0</version>
+
+	<name>Regular Expression Facade for Java</name>
+
+	<url>https://github.com/aunkrig/lfr/</url>
+
+	<dependencies>
+		<dependency>
+			<groupId>de.unkrig.commons</groupId>
+			<artifactId>commons-nullanalysis</artifactId>
+			<version>1.2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>de.unkrig.commons</groupId>
+			<artifactId>commons-util</artifactId>
+			<version>1.2.11</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-  </dependencies>
+	</dependencies>
+	<properties>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<description>A facade or abstraction for various regular expression frameworks (currently java.util.regex and de.unkrig.lfr).</description>
+
+	<organization>
+		<name>Arno Unkrig</name>
+		<url>http://unkrig.de/</url>
+	</organization>
+
+	<scm>
+		<url>https://github.com/aunkrig/lfr</url>
+	</scm>
+
+	<developers>
+		<developer>
+			<name>Arno Unkrig</name>
+			<email>arno@unkrig.de</email>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>New BSD License</name>
+			<url>http://unkrig.de/w/New_BSD_License</url>
+		</license>
+	</licenses>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<build>
+		<plugins>
+
+			<!-- Java source-jar plug-in: -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals><goal>jar</goal></goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Maven staging plug-in: -->
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+			
+			<!-- Javadoc plug-in: -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.4</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals><goal>jar</goal></goals>
+					</execution>
+				</executions>
+
+				<configuration>
+					<author>false</author>
+					<use>false</use>
+					<version>false</version>
+					<additionalparam>-Xdoclint:none</additionalparam>
+					<encoding>UTF-8</encoding>
+					<quiet>true</quiet>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<profiles>
+
+		<!-- Signs all artifacts with GPG (oss.sonatype.org requires that). -->
+		<profile>
+			<id>have_gpg</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals><goal>sign</goal></goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
