--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>de.unkrig.lfr</groupId>
 	<artifactId>lfr-core</artifactId>
-	<version>1.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<name>Lightning-fast regular expressions</name>
 
