--- a/ref4j/pom.xml
+++ b/ref4j/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>de.unkrig.lfr</groupId>
 	<artifactId>ref4j</artifactId>
-	<version>1.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<name>Regular Expression Facade for Java</name>
 
