--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>de.unkrig.lfr</groupId>
 			<artifactId>ref4j</artifactId>
-			<version>1.0</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<properties>
