--- a/ref4j/pom.xml
+++ b/ref4j/pom.xml
@@ -12,13 +12,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.unkrig.commons</groupId>
-			<artifactId>commons-nullanalysis</artifactId>
-			<version>1.2.11</version>
-		</dependency>
-		<dependency>
-			<groupId>de.unkrig.commons</groupId>
 			<artifactId>commons-util</artifactId>
-			<version>1.2.11</version>
+			<version>1.2.12-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
