--- a/ref4j/pom.xml
+++ b/ref4j/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>de.unkrig.commons</groupId>
 			<artifactId>commons-util</artifactId>
-			<version>1.2.12-SNAPSHOT</version>
+			<version>1.2.13</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
