--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -68,6 +68,18 @@
 	<build>
 		<plugins>
 
+			<!-- Java jar plug-in: -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<goals><goal>test-jar</goal></goals>
+					</execution>
+				</executions>
+			</plugin>
+
 			<!-- Java source-jar plug-in: -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
