--- a/openjdk8_regex_tests/pom.xml
+++ b/openjdk8_regex_tests/pom.xml
@@ -29,6 +29,15 @@
   		<groupId>de.unkrig.lfr</groupId>
   		<artifactId>lfr-core</artifactId>
   		<version>1.0.1-SNAPSHOT</version>
+  		<type>jar</type>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>de.unkrig.lfr</groupId>
+  		<artifactId>lfr-core</artifactId>
+  		<version>1.0.1-SNAPSHOT</version>
+  		<type>test-jar</type>
+  		<scope>test</scope>
   	</dependency>
   </dependencies>
 </project>
