--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>de.unkrig.commons</groupId>
 			<artifactId>commons-text</artifactId>
-			<version>1.2.17-SNAPSHOT</version>
+			<version>1.2.14</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
