--- a/openjdk8_regex_tests/pom.xml
+++ b/openjdk8_regex_tests/pom.xml
@@ -1,43 +1,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>openjdk8_regex_tests</groupId>
 	<artifactId>openjdk8_regex_tests</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 
-	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+	<name>OpenJDK 8 regex test suite</name>
 
-  <dependencies>
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.11</version>
-		<scope>test</scope>
-	</dependency>
-<!-- 
-  	<dependency>
-  		<groupId>de.unkrig.lfr</groupId>
-  		<artifactId>ref4j</artifactId>
-  		<version>1.0.1-SNAPSHOT</version>
-  	</dependency>
- -->
-  	<dependency>
-  		<groupId>de.unkrig.lfr</groupId>
-  		<artifactId>lfr-core</artifactId>
-  		<version>1.0.1-SNAPSHOT</version>
-  		<type>jar</type>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>de.unkrig.lfr</groupId>
-  		<artifactId>lfr-core</artifactId>
-  		<version>1.0.1-SNAPSHOT</version>
-  		<type>test-jar</type>
-  		<scope>test</scope>
-  	</dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.unkrig.lfr</groupId>
+			<artifactId>lfr-core</artifactId>
+			<version>1.1.0</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.unkrig.lfr</groupId>
+			<artifactId>lfr-core</artifactId>
+			<version>1.1.0</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<profiles>
+
+		<!-- Signs all artifacts with GPG (oss.sonatype.org requires that). -->
+		<profile>
+			<id>have_gpg</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+	<parent>
+		<groupId>de.unkrig.lfr</groupId>
+		<artifactId>lfr-parent</artifactId>
+		<version>1.1.0</version>
+		<relativePath>../lfr-parent</relativePath>
+	</parent>
 </project>
