--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -9,7 +9,7 @@
 		<dependency>
 			<groupId>de.unkrig.commons</groupId>
 			<artifactId>commons-text</artifactId>
-			<version>1.2.14</version>
+			<version>1.2.17-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>de.unkrig.lfr</groupId>
 			<artifactId>ref4j</artifactId>
-			<version>1.1.0</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -65,9 +65,9 @@
 	</profiles>
 
 	<parent>
-		<relativePath>../lfr-parent</relativePath>
 		<groupId>de.unkrig.lfr</groupId>
 		<artifactId>lfr-parent</artifactId>
-		<version>1.1.0</version>
+		<version>1.1.1-SNAPSHOT</version>
+		<relativePath>../lfr-parent</relativePath>
 	</parent>
 </project>
