--- a/lfr-core/pom.xml
+++ b/lfr-core/pom.xml
@@ -9,18 +9,16 @@
 		<dependency>
 			<groupId>de.unkrig.commons</groupId>
 			<artifactId>commons-text</artifactId>
-			<version>1.2.17-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.unkrig.lfr</groupId>
 			<artifactId>ref4j</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -67,7 +65,7 @@
 	<parent>
 		<groupId>de.unkrig.lfr</groupId>
 		<artifactId>lfr-parent</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
+		<version>1.2.0</version>
 		<relativePath>../lfr-parent</relativePath>
 	</parent>
 </project>
