--- a/lfr-parent/pom.xml
+++ b/lfr-parent/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>de.unkrig.lfr</groupId>
 	<artifactId>lfr-parent</artifactId>
-	<version>1.2.0</version>
+	<version>1.2.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
