--- a/openjdk8_regex_tests/pom.xml
+++ b/openjdk8_regex_tests/pom.xml
@@ -47,7 +47,7 @@
 	<parent>
 		<groupId>de.unkrig.lfr</groupId>
 		<artifactId>lfr-parent</artifactId>
-		<version>1.2.0</version>
+		<version>1.2.1-SNAPSHOT</version>
 		<relativePath>../lfr-parent</relativePath>
 	</parent>
 </project>
