--- a/lfr-parent/pom.xml
+++ b/lfr-parent/pom.xml
@@ -39,7 +39,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<de.unkrig.commons-version>1.2.17</de.unkrig.commons-version>
+		<de.unkrig.commons-version>1.2.18-SNAPSHOT</de.unkrig.commons-version>
 		<junit-version>4.13.1</junit-version>
 	</properties>
 
